--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 
 
-  "name": "Ardulock",
+  "name": "Ardulock2",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
