--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/native-storage": "^4.17.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
+    "@ionic/lab": "^1.0.13",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "7.1.1",
     "cordova-plugin-device": "2.0.2",
