Update app configuration

--- a/package.json
+++ b/package.json
@@ -55,6 +55,9 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-sqlite-storage": {}
-    }
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
